# journalx

./: .gitignore  LICENSE  README.md  config.py  description.md  process.py  requirements.txt  setup.cfg
journalx/: cli.py  main.py
