[metadata]
name = journalx
version = 0.0.1
author = Sahil Manocha
author_email = sahilmanocha1994@gmail.com
description = journalx supercharges your text-based journal
long_description = file: description.md
long_description_content_type = text/markdown
url = https://github.com/altairmn/journalx
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = journalx
python_requires = >=3.6
install_requires =
    Click
    python-frontmatter

[options.entry_points]
console_scripts =
    jx = journalx.cli:cli